# Eida

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindBotan.cmake
common/: CMakeLists 2.txt  Interval.h  XmlSax.h  aida.toml  common.h  gconfig.cpp  gconfig.h  generator.hpp  recursive_generator.hpp  tmp.cpp
m32/: CMakeLists 2.txt  Color.h  Duration.cpp  Duration.h  GNote.h  Lyric.cpp  Lyric.h  M32Except.h  Measure.h  MidiExport.h  MidiImport.cpp  MidiImport.h  MxlExport.h  MxlImport.h  Part.h  Pitch.cpp  Pitch.h  Score.h  SimpleNote.h  Stream.h  TieInfo.h  Tuplet.cpp  Tuplet.h  cmps.h  debugprint.cpp  debugprint.h  show.h  types.h  utility.h
tests/: CMakeLists 2.txt
tests/common/: CommonMain.cpp  IntervalTest.cpp
tests/m32/: ColorTest.cpp  DurationTest.cpp  GNoteTest.cpp  ImportExport.cpp  M32Main.cpp  MeasureTest.cpp  MidiImportExport.cpp  PartTest.cpp  PitchTest.cpp  SimpleNoteTest.cpp  TupletTest.cpp
tests/mash/: DFSAlignTest 2.cpp  MashMain.cpp
tests/tinynote/: CommonTest.cpp  Length.cpp  MeasureTest.cpp  Number.cpp  PartParser.cpp  SingleNoteTest.cpp  (+3 more)
tinynote/: .CMakeLists 2.txt.icloud  .DebugControl 2.h.icloud  .Length 2.h.icloud  .MeasureParser 2.h.icloud  .Number 2.h.icloud  .ParseException 2.h.icloud  .PartParser 2.h.icloud  .PitchParser 2.h.icloud  .SimpleNoteParser 2.h.icloud  .TupletParser 2.h.icloud  .common 2.h.icloud  .tmp 2.cpp.icloud  CMakeLists 2.txt  DebugControl.h  Length 2.h  MeasureParser 2.h  Number 2.h  ParseException 2.h  PartParser 2.h  PitchParser.h  SimpleNoteParser 2.h  TupletParser.h  common 2.h  tmp.cpp
(+11 files in other folders)
